# BridgeRouter

./: .gitignore  .gitmodules  README.md  build.sh  clean.sh  run.sh
exploits/blast_cred/: blast.c  exploit.c  fakefuse.c  fakefuse.h  util.c  util.h
exploits/blast_cred/kmod/: rdd.c
identifier/: Makefile
identifier/src/lib/: AllocAnalyzer.cc  AllocAnalyzer.h  Annotation.cc  Annotation.h  CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.h  CopyAnalyzer.cc  CopyAnalyzer.h  GlobalCtx.h  KAMain.cc  PermissionAnalysis.cc  PermissionAnalysis.h  PointerAnalysis.cc  PointerAnalysis.h  SkbufferAnalyzer.cc  SkbufferAnalyzer.h  StructAnalyzer.cc  StructAnalyzer.h  StructChecker.cc  StructChecker.h
identifier/test/: alloc.c  bridge.c  router.c  skbuffer.c  util.h
tools/: clang-trigger  default.cfg  linux-log-cap.patch  linux-makefile.patch  linux_config  llvm-caplog.patch  merge.py
trigger/: .gitignore  go.mod  go.sum
trigger/executor/: executor.cc
trigger/executor/android/: arm64_app_policy.h  arm64_system_policy.h  arm_app_policy.h  arm_system_policy.h
trigger/pkg/ipc/: ipc.go
trigger/pkg/mgrconfig/: load.go
trigger/pkg/rpctype/: rpctype.go
trigger/prog/: prio.go
trigger/sys/linux/: sys.txt  sys.txt.const
trigger/sys/syz-sysgen/: sysgen.go
trigger/syz-fuzzer/: proc.go
trigger/syz-manager/: manager.go
trigger/tools/syz-declextract/: syz-declextract.cpp
trigger/vm/vmimpl/: util.go
